# ot-harjoitustyo

./: README.md
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
food-app/: .gitignore  pyproject.toml  tasks.py
food-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
food-app/src/: database_connection.py  index.py  initialize_database.py  schema.sql
food-app/src/entities/: item.py  meal.py  user.py
food-app/src/repositories/: item_repository.py  meal_repository.py  user_repository.py
food-app/src/services/: diary_service.py
food-app/src/tests/: item_repository_test.py  user_repository_test.py
food-app/src/tests/repositories/: meal_repository_test.py  user_repository_test.py
food-app/src/tests/services/: diary_service_test.py
food-app/src/ui/: all_meals_view.py  create_item_view.py  create_meal_view.py  create_user_view.py  login_view.py  main_menu.py  start_view.py  style.py  today_view.py  ui.py
food-app/src/ui/components/: all_meals_list.py
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
