[project]
name = "food-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Kooville",email = "ville.kuhlberg@helsinki.fi"}
]
requires-python = "^3.12"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "coverage (>=7.13.5,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
